# mnist-classifier

./: .gitignore  CMakeLists.txt
apps/: train_model_main.cc
data/: testing_model.json  testing_test_dataset_4x4.txt  testing_test_dataset_5x5.txt  testing_train_dataset_4x4.txt  testing_train_dataset_5x5.txt
include/core/: dataset.h  executable_logic.h  image.h  model.h
include/visualizer/: naive_bayes_app.h  sketchpad.h
src/core/: dataset.cc  executable_logic.cc  image.cc  model.cc
src/visualizer/: naive_bayes_app.cc  sketchpad.cc
tests/: test_dataset.cc  test_image.cc  test_model.cc  test_model_classification.cc
